Resolved a small issue with portrait icons not being aligned properly

--- a/InfinityModTool/wwwroot/css/site.css
+++ b/InfinityModTool/wwwroot/css/site.css
@@ -343,6 +343,13 @@ img .vertical-align {
         object-fit: cover;
         width: 100%;
         height: 100%;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        -ms-transform: translate(-50%,-50%);
+        -moz-transform: translate(-50%,-50%);
+        -webkit-transform: translate(-50%,-50%);
+        transform: translate(-50%,-50%);
     }
 
     .character-button .button-title-banner {
